Add Comparable Type